fix cards hight overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -40,10 +40,6 @@
     }
 }
 
-.h-150 {
-    height: 150px;
-}
-
 .loaded {
     animation: loaded 1s ease-in-out 1;
 }
